Front panel is nearly mute (practically unusable)
Version, Distribution, Desktop Environment:
0.3.28, Archlinux, GNOME
Description of Problem: Since upgrading to 0.3.28 my front-panel basically stopped working properly. All other outputs still work fine but the front panel provides only extremely quiet portions of the actual audio. It sounds as if only 1%~10% of the volume would get to the output. However over-amplifying the audio from application level still ends up in clipping (even though it is very quiet clipping).
By the way I have also checked if any configuration messed this up because only one specific device was affected. But even turning up all volume configurations I know of doesn't help much (I tried GNOMEs sound settings", PulseAudio Volume Control, alsamixer and I even checked values in my pipewire configurations which were also 1.000000). I also tried to remove /usr/share/pipewire
and ~/.config/pipewire
, reinstall the pipewire packages and reboot to refresh any potential old config flaw.
How Reproducible: Plug in headphones (or any other speaker) to the front-panel and select it as output device.
Steps to Reproduce:
- Plug in headphones (or any other speaker) to the front-panel
- Select the matching audio output device
- Play any audio source (application, video, audio...)
Actual Results: I can only listen to a very much reduced volume of the actual audio (about 1% to 10% of the volume configured).
Expected Results: I can listen to the played audio source in its actual volume.
Additional Info Eg. pw-dump -N > file
(As Attachment Please):
dump.txt